(lang dune 2.7)
(name stitchcraft)
(source (github yomimono/stitchcraft))
(license AGPL)
(authors "yomimono")
(maintainers "stitchcraft@identity-function.com")
(generate_opam_files true)

(package
 (name stitchcraft)
 (synopsis "make and display textual cross-stitch patterns")
 (description "Do you like making cross-stitch patterns, but hate arithmetic? Work primarily in a square-unit medium, but want to do it on the terminal? Stitchcraft has your back."
)
(depends
  (dune (>= 2.7))
  (alcotest (>= 1.0.0))
  (angstrom (>= 0.15.0))
  (angstrom-lwt-unix (>= 0.15.0))
  (angstrom-unix (>= 0.15.0))
  (astring (>= 0.8.0))
  (base64 (>= 3.0.0))
  (bos (>= 0.2.0))
  (camlpdf (>= 2.3 ))
  (caqti (>= 1.2.0 ))
  (caqti-driver-sqlite3 (>= 1.2.0 ))
  (caqti-lwt (>= 1.2.0 ))
  (cmdliner (>= 1.1.0 ))
  (cstruct (>= 5.0.0 ))
  (fmt (>= 0.8.0 ))
  (imagelib (>= 20200929 ))
  (lwt (>= 5.0.0 ))
  (notty (>= 0.2.2 ))
  (otfm (>= 0.4.0 ))
  (ppx_cstruct (>= 5.0.0 ))
  (ppx_deriving (>= 5.0 ))
  (ppx_deriving_yojson (>= 3.6.0 ))
  (rresult (>= 0.6.0 ))
  (uucp (>= 13.0.0 ))
  (uunf (>= 13.0.0 ))
  (uutf (>= 1.0.0 ))
  (yojson (>= 1.7.0))
))
