(library
  (public_name stitchcraft.listing)
  (name listing)
  (libraries cmdliner rresult stitchy imagelib imagelib.unix)
)

(rule (alias runtest)
      (deps test/test.pattern)
      (action (progn
                (run listing -k -i test/test.pattern -o test.png)
                (run xdg-open test.png)
                ))
      )
