(executable
 (public_name embellish_stitch)
 (modules embellish_stitch)
 (libraries border cmdliner stitchy))

(executable
 (public_name repeat_corner)
 (modules repeat_corner)
 (libraries border cmdliner stitchy))

(data_only_dirs test)

(rule (alias runtest)
 (deps fill.pattern (glob_files test/*))
 (action
  (progn
   (run repeat_corner -o repeated_corners.pattern --border test/border.pattern --center test/repeat_center.pattern --corner test/corner.pattern --fill fill.pattern)
   (run stitchpattern -w "TEST IMAGE from https://github.com/yomimono/stitchcraft" -o repeated_corners.pdf -i repeated_corners.pattern)
   (run xdg-open repeated_corners.pdf)
   (run embellish_stitch --fencepost=test/fencepost.pattern --corner=test/top.pattern --top=test/top.pattern --center=test/center.pattern -o fencepost.pattern)
   (run stitchpattern -w "TEST IMAGE from https://github.com/yomimono/stitchcraft" -o fencepost.pdf -i fencepost.pattern)
   (run xdg-open fencepost.pdf)
)))
