(executable
 (public_name c64say)
 (libraries c64say astring cmdliner imagelib imagelib-unix)
)

(alias
 (name runtest)
  (action
   (progn
    (run c64say "A/B/O is weird\njust sayin'")
    (run display isaid.png)
    (run c64say -o pangram.png "THE QUICK BROWN FOX\njumps over the lazy dog\n\nsphinx of black quartz\nJUDGE MY VOW!")
    (run display pangram.png)
)))
