(executable
 (public_name embellish_stitch)
 (modules embellish_stitch)
 (libraries borders cmdliner stitchy))

(executable
 (public_name hcat)
 (modules hcat)
 (libraries cmdliner stitchy))

(executable
 (public_name vcat)
 (modules vcat)
 (libraries cmdliner stitchy))

(executable
 (public_name repeat_corner)
 (modules repeat_corner)
 (libraries borders cmdliner stitchy))

(data_only_dirs test)

(rule (alias runtest)
 (deps test/corner.json test/center.json test/border.json)
 (action
  (progn
   (run repeat_corner -o repeated_corners.json --border test/border.json --center test/center.json --corner test/corner.json)
   (run stitchpattern -w "TEST IMAGE from https://github.com/yomimono/stitchcraft" -o repeated_corners.pdf -i repeated_corners.json)
   (run xdg-open repeated_corners.pdf)
)))
