(library
  (name postgres)
  (modules postgres)
  (libraries bos fontreader pgx pgx_lwt_unix stitchy stitchcraft.db)
)

(executable
 (public_name readpsf)
 (modules readpsf)
 (libraries cmdliner bos fontreader fmt)
)
(executable
  (public_name font2postgres)
  (modules font2postgres)
  (libraries cmdliner fontreader postgres stitchcraft.db)
)
