(executable
  (public_name pat2stitchy)
  (modules pat2stitchy)
  (libraries angstrom-lwt-unix angstrom-unix cmdliner lwt lwt.unix patreader rresult stitchy)
  )

(executable
  (public_name patbrowser)
  (modules patbrowser)
  (libraries angstrom-lwt-unix angstrom-unix cmdliner lwt lwt.unix notty notty.lwt rresult stitchy)
)
