(executable
 (public_name stitchpattern)
 (modules stitchpattern)
 (libraries pattern cmdliner camlpdf stitchy)
)

(data_only_dirs test)

(rule (alias runtest)
 (deps test/stitch.json)
 (action
  (progn
   (run stitchpattern -w "TEST IMAGE" -p20 -o ocaml.pdf -i test/stitch.json)
   (run pdfinfo ocaml.pdf)
   (run xdg-open ocaml.pdf)
)))
