(executable
 (public_name stitchpattern)
 (modules stitchpattern)
 (libraries pattern cmdliner camlpdf stitchy)
)

(rule (alias runtest)
 (action
  (progn
   (with-stdout-to empty.pattern (run stitchcraft gen empty 61 64))
   (with-stdout-to vertical_line.pattern (run stitchcraft gen rect 1 66))
   (with-stdout-to horizontal_line.pattern (run stitchcraft gen rect 61 1))
   (run stitchcraft manip hcat -o center.pattern horizontal_line.pattern empty.pattern horizontal_line.pattern)
   (run stitchcraft manip vcat -o box.pattern vertical_line.pattern center.pattern vertical_line.pattern)
   (run %{exe:stitchpattern.exe} -w "TEST IMAGE" -o box.pdf -i box.pattern)
   (run pdfinfo box.pdf)
   (run xdg-open box.pdf)
)))
