(executables
 (public_names empty rect backstitch)
 (libraries cmdliner primitives stitchy yojson)
)

(rule
 (alias runtest)
 (action (progn
  (with-stdout-to empty.pattern (run %{exe:empty.exe} 8 8))
  (with-stdout-to vertical_line.pattern (run %{exe:rect.exe} 1 10))
  (with-stdout-to horizontal_line.pattern (run %{exe:rect.exe} 8 1))
  (run hcat -o center.pattern horizontal_line.pattern empty.pattern horizontal_line.pattern)
  (run vcat -o box.pattern vertical_line.pattern center.pattern vertical_line.pattern)
  (run stitchpattern -w "TEST IMAGE" -o box.pdf -i box.pattern)
  (run xdg-open box.pdf)
 ))
)
