(executable
 (public_name readpsf)
 (modules readpsf)
 (libraries cmdliner bos fmt psf2stitchfont)
)

(library
 (name sqlite)
 (modules sqlite)
 (libraries bos caqti caqti-driver-sqlite3 caqti-lwt lwt psf2stitchfont sqlite3 stitchy)
)

(executable
 (public_name psf2sqlite)
 (modules psf2sqlite)
 (libraries cmdliner psf2stitchfont sqlite)
)
(executable
 (public_name otf2sqlite)
 (modules otf2sqlite)
 (libraries cmdliner psf2stitchfont sqlite)
)
(executable
 (public_name readotf)
 (modules readotf)
 (libraries cmdliner bos fmt psf2stitchfont)
)

(alias
 (name runtest)
 (deps (file fonts/Bm437_ATI_8x8_6.fnt.psf)
       (file fonts/Bm437_AMI_EGA_8x8.otb))
 (action
  (progn
   (run readpsf fonts/Bm437_ATI_8x8_6.fnt.psf)
   (run readotf fonts/Bm437_AMI_EGA_8x8.otb)
)))

(alias
 (name sqltest)
 (deps (source_tree fonts))
 (action
  (progn
   (run otf2sqlite --debug --name sqlitetestfont --db /tmp/fonts.sqlite3 fonts/BmPlus_IBM_EGA_8x8.otb)
   (run c64stitch --font sqlitetestfont --db /tmp/fonts.sqlite3 -o dosbutts.json

"┌┐
││/\\ in
│//\\\\ this
//┌┐\\\\ house
‾│└┘│‾ we
/‾‾‾‾‾‾‾‾‾\\
handle unicode
//┌┬┐┌┐┌┬┐\\\\
‾│└┴┘││└┴┘│‾
")

   (run notty_canvas dosbutts.json)
  )))
