(library
 (name stitchy)
 (public_name stitchy)
 (modules dMC rGB symbol thread types)
 (libraries yojson ppx_deriving.eq ppx_deriving_yojson.runtime base64 crowbar fmt)
 (preprocess (pps ppx_deriving.eq ppx_deriving_yojson ppx_deriving_crowbar))
)

(library
 (name transformers)
 (public_name stitchy.transformers)
 (modules transformers)
 (libraries imagelib imagelib-unix stitchy)
 (preprocess (pps ppx_deriving.eq ppx_deriving_yojson ppx_deriving_crowbar))
)

(library
 (name files)
 (public_name stitchy.files)
 (modules files)
 (libraries stitchy yojson)
 (preprocess (pps ppx_deriving.eq ppx_deriving_yojson ppx_deriving_crowbar))
)
