(library
 (name stitchy)
 (public_name stitchy)
 (modules dMC rGB symbol thread types)
 (libraries yojson ppx_deriving.eq ppx_deriving_yojson.runtime base64 fmt)
 (preprocess (pps ppx_deriving.eq ppx_deriving_yojson))
)

(library
 (name transformers)
 (public_name stitchy.transformers)
 (modules transformers)
 (libraries imagelib  stitchy)
 (preprocess (pps ppx_deriving.eq ppx_deriving_yojson))
)

(library
 (name files)
 (public_name stitchy.files)
 (modules files)
 (libraries stitchy yojson)
 (preprocess (pps ppx_deriving.eq ppx_deriving_yojson))
)
