(rule
 (targets template.ml)
 (deps template.eml.ml)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))

(executable
  (name server)
  (modules server template)
  (libraries caqti-driver-postgresql dream))

(executable
 (name display)
 (modules display canvas)
 (modes js)
 (libraries base64 js_of_ocaml js_of_ocaml-lwt stitchy)
 (preprocess (pps js_of_ocaml-ppx))
)

(executable
  (name search)
  (modules search)
  (modes js)
  (libraries js_of_ocaml js_of_ocaml-lwt lwt)
  (preprocess (pps js_of_ocaml-ppx))
)

(rule
  (alias runtest)
  (deps search.bc.js display.bc.js server.exe)
  (action
    (run ./server.exe)
    ))
