(rule
 (targets template.ml)
 (deps template.eml.ml)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))

(library
  (name js_canvas)
  (modules canvas)
  (libraries base64 js_of_ocaml js_of_ocaml-lwt stitchy estimator)
  (preprocess (pps js_of_ocaml-ppx))
)

(executable
  (name server)
  (modules server template)
  (libraries stitchcraft.db caqti-driver-postgresql dream stitchy))

(executable
 (name display)
 (modules display)
 (modes js)
 (libraries js_canvas base64 js_of_ocaml js_of_ocaml-lwt stitchy estimator)
 (preprocess (pps js_of_ocaml-ppx))
)

(executable
  (name create)
  (modules create)
  (modes js)
  (libraries js_canvas js_of_ocaml js_of_ocaml-lwt stitchy estimator textstitch)
  (preprocess (pps js_of_ocaml-ppx))
)

(executable
  (name tags)
  (modules tags)
  (modes js)
  (libraries js_of_ocaml js_of_ocaml-lwt lwt)
  (preprocess (pps js_of_ocaml-ppx))
)

(rule
  (alias runtest)
  (deps tags.bc.js display.bc.js create.bc.js server.exe)
  (action
    (run ./server.exe)
    ))
